# bevy_mod_spatial_query

./: Cargo.toml
benches/: benchmarks.rs
examples/: entities_in_radius.rs
src/: lib.rs  spatial_query.rs  spatial_query_iterator.rs
src/algorithms/: bvh.rs  mod.rs  octree.rs
